force-app/main/default/objects/Case/fields/Background_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Background_Analysis__c</fullName>
    <inlineHelpText>For internal use for troubleshooting &amp; analysis detail</inlineHelpText>
    <label>Background &amp; Analysis</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>