force-app/main/default/objects/Case/fields/Business_Impact__c.field-meta.xml
<CustomField>
    <fullName>Business_Impact__c</fullName>
    <inlineHelpText>What is the impact to your business?</inlineHelpText>
    <label>Business Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low - Issue or Question with limited business impact</fullName>
            </value>
            <value>
                <fullName>Normal - Application issue that has moderate impact to the business</fullName>
            </value>
            <value>
                <fullName>High - Serious degradation of application performance or functionality</fullName>
            </value>
            <value>
                <fullName>Critical - Application is down for ALL USERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>