force-app/main/default/objects/Case/fields/Cause_Category__c.field-meta.xml
<CustomField>
    <fullName>Cause_Category__c</fullName>
    <label>Cause Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel</fullName>
                <label>Travel Issues</label>
            </value>
            <value>
                <fullName>Presenter</fullName>
                <label>Presenter/Coach Error</label>
            </value>
            <value>
                <fullName>Swap</fullName>
                <label>Late Swap Error</label>
            </value>
            <value>
                <fullName>Resigned</fullName>
            </value>
            <value>
                <fullName>External</fullName>
                <label>External Factor</label>
            </value>
            <value>
                <fullName>RecurringIllness</fullName>
                <label>Recurring Illness</label>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>MentalHealth</fullName>
                <label>Mental Health</label>
            </value>
            <value>
                <fullName>Pitch</fullName>
            </value>
            <value>
                <fullName>Crowd</fullName>
                <label>Crowd Control</label>
            </value>
            <value>
                <fullName>Script</fullName>
                <label>Script Knowledge</label>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
                <label>Did not collect feedback</label>
            </value>
            <value>
                <fullName>Language</fullName>
            </value>
            <value>
                <fullName>Conduct</fullName>
            </value>
            <value>
                <fullName>Uniform</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
                <label>Poor Communication</label>
            </value>
            <value>
                <fullName>SocialMedia</fullName>
                <label>Social Media Policy Breach</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Requirements</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Governance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>