force-app/main/default/objects/Case/fields/Cause_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cause_Comments__c</fullName>
    <label>Cause Comments</label>
    <length>250</length>
    <type>Text</type>
</CustomField>