force-app/main/default/objects/Case/fields/Description1__c.field-meta.xml
<CustomField>
    <fullName>Description1__c</fullName>
    <inlineHelpText>Include what happened, expected outcomes, screenshots of error messages, link to record(s) and steps to reproduce.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>