force-app/main/default/objects/Case/fields/Expected_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Due_Date__c</fullName>
    <inlineHelpText>Indicative date to address the case</inlineHelpText>
    <label>Expected Due Date</label>
    <type>Date</type>
</CustomField>