force-app/main/default/objects/Case/fields/External_Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Ticket_Id__c</fullName>
    <inlineHelpText>Used when a ticket has been logged with an external party eg Skedulo, Zoom</inlineHelpText>
    <label>External Ticket Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>