force-app/main/default/objects/Case/fields/Pending_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pending_Reason__c</fullName>
    <label>Pending Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for External Party</fullName>
            </value>
            <value>
                <fullName>Waiting for Internal Support</fullName>
            </value>
            <value>
                <fullName>Waiting for Date</fullName>
            </value>
            <value>
                <fullName>Waiting for Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>