force-app/main/default/objects/Case/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B Study Skills</fullName>
            </value>
            <value>
                <fullName>B2B Connect</fullName>
            </value>
            <value>
                <fullName>B2B Cura</fullName>
            </value>
            <value>
                <fullName>B2C Study Skills (Coaching)</fullName>
            </value>
            <value>
                <fullName>B2C Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>