force-app/main/default/objects/Case/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High – Client impacted and unhappy</fullName>
            </value>
            <value>
                <fullName>Medium – Client impacted but happy</fullName>
            </value>
            <value>
                <fullName>Low – Client not impacted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>