force-app/main/default/objects/Case/fields/Solution_Description__c.field-meta.xml
<CustomField>
    <fullName>Solution_Description__c</fullName>
    <label>Solution Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>