force-app/main/default/objects/Case/fields/Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sub_Reason__c</fullName>
    <label>Sub Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Performance/quality</fullName>
            </value>
            <value>
                <fullName>Professionalism</fullName>
            </value>
            <value>
                <fullName>Punctuality</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Presenter numbers</fullName>
            </value>
            <value>
                <fullName>Roster issue</fullName>
            </value>
            <value>
                <fullName>Workshop scheduling</fullName>
            </value>
            <value>
                <fullName>Printing</fullName>
            </value>
            <value>
                <fullName>Tech bug</fullName>
            </value>
            <value>
                <fullName>Video conferencing</fullName>
            </value>
            <value>
                <fullName>Student/staff issues</fullName>
            </value>
            <value>
                <fullName>Turnaround time</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Resignation</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>