force-app/main/default/objects/Case/recordTypes/Salesforce_Request.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Request</fullName>
    <active>true</active>
    <businessProcess>Salesforce Support Process</businessProcess>
    <description>For all internal tech support requests</description>
    <label>Tech Request (Internal)</label>
</RecordType>