force-app/main/default/objects/Case/validationRules/Expected_Due_Date_Cannot_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Due_Date_Cannot_Edit</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 ISCHANGED( Expected_Due_Date__c ), 
OR(ISPICKVAL(Status , &apos;Closed - Resolved&apos;), ISPICKVAL(Status , &apos;Closed - Duplicate&apos;))

)</errorConditionFormula>
    <errorDisplayField>Expected_Due_Date__c</errorDisplayField>
    <errorMessage>Closed Case cannot edit this field.</errorMessage>
</ValidationRule>