force-app/main/default/objects/Case/listViews/My_Tech_Request.listView-meta.xml
<ListView>
    <fullName>My_Tech_Request</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Business_Unit__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Business_Impact__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Salesforce_Request</value>
    </filters>
    <filters>
        <field>Created_By_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Tech Request</label>
    <sharedTo>
        <group>All_SBU_Office_Staff</group>
    </sharedTo>
</ListView>