force-app/main/default/objects/Case/listViews/SFDC_Queue_Case.listView-meta.xml
<ListView>
    <fullName>SFDC_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>SFDC</label>
    <queue>SFDC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>